{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 85,
  "lineage": "fe73e982-636e-9d10-d628-1d4d4a1af167",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-094d5a357c5eb0a35",
            "association_id": "eipassoc-0d796bb1181eb988e",
            "domain": "vpc",
            "id": "eipalloc-094d5a357c5eb0a35",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-04ec2be82f145d9ee",
            "private_dns": "ip-192-168-11-228.ap-northeast-1.compute.internal",
            "private_ip": "192.168.11.228",
            "public_dns": "ec2-46-51-237-177.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "46.51.237.177",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "ops",
              "Name": "eip_nat_gateway"
            },
            "tags_all": {
              "Environment": "ops",
              "Name": "eip_nat_gateway"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-whiteboard_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:internet-gateway/igw-0534188c5b0c311d9",
            "id": "igw-0534188c5b0c311d9",
            "owner_id": "569083195829",
            "tags": {
              "Environment": "ops",
              "Name": "igw-whiteboard_vpc"
            },
            "tags_all": {
              "Environment": "ops",
              "Name": "igw-whiteboard_vpc"
            },
            "vpc_id": "vpc-06bded5f3b5fbaae5"
          },
          "dependencies": [
            "aws_vpc.whiteboard_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-whiteboard_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-094d5a357c5eb0a35",
            "association_id": "eipassoc-0d796bb1181eb988e",
            "connectivity_type": "public",
            "id": "nat-06a18cd299731fd6a",
            "network_interface_id": "eni-04ec2be82f145d9ee",
            "private_ip": "192.168.11.228",
            "public_ip": "46.51.237.177",
            "subnet_id": "subnet-0659495809581a580",
            "tags": {
              "Environment": "ops",
              "Name": "nat-whiteboard_vpc"
            },
            "tags_all": {
              "Environment": "ops",
              "Name": "nat-whiteboard_vpc"
            }
          },
          "dependencies": [
            "aws_eip.eip_nat_gateway",
            "aws_subnet.public",
            "aws_vpc.whiteboard_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "whiteboard_private_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:route-table/rtb-0ba3d0fcf75e002b8",
            "id": "rtb-0ba3d0fcf75e002b8",
            "owner_id": "569083195829",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-06a18cd299731fd6a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "ops",
              "Name": "whiteboard_private_table"
            },
            "tags_all": {
              "Environment": "ops",
              "Name": "whiteboard_private_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bded5f3b5fbaae5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat-whiteboard_vpc",
            "aws_vpc.whiteboard_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "whiteboard_public_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:route-table/rtb-0b3216faa8fce75a9",
            "id": "rtb-0b3216faa8fce75a9",
            "owner_id": "569083195829",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0534188c5b0c311d9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "ops",
              "Name": "whiteboard_public_table"
            },
            "tags_all": {
              "Environment": "ops",
              "Name": "whiteboard_public_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bded5f3b5fbaae5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-whiteboard_vpc",
            "aws_vpc.whiteboard_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a92697361469f45",
            "route_table_id": "rtb-0ba3d0fcf75e002b8",
            "subnet_id": "subnet-08dcd3eb4618b6226"
          },
          "dependencies": [
            "aws_eip.eip_nat_gateway",
            "aws_nat_gateway.nat-whiteboard_vpc",
            "aws_route_table.whiteboard_private_table",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.whiteboard_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c499df8c363ce295",
            "route_table_id": "rtb-0ba3d0fcf75e002b8",
            "subnet_id": "subnet-0c5e0d170eec159d3"
          },
          "dependencies": [
            "aws_eip.eip_nat_gateway",
            "aws_nat_gateway.nat-whiteboard_vpc",
            "aws_route_table.whiteboard_private_table",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.whiteboard_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0563c3ae5ae3f08ad",
            "route_table_id": "rtb-0ba3d0fcf75e002b8",
            "subnet_id": "subnet-0af3c7d3fa86d0050"
          },
          "dependencies": [
            "aws_eip.eip_nat_gateway",
            "aws_nat_gateway.nat-whiteboard_vpc",
            "aws_route_table.whiteboard_private_table",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.whiteboard_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a146fbb64cc3b85d",
            "route_table_id": "rtb-0ba3d0fcf75e002b8",
            "subnet_id": "subnet-0bbd7572f1c49cdaa"
          },
          "dependencies": [
            "aws_eip.eip_nat_gateway",
            "aws_nat_gateway.nat-whiteboard_vpc",
            "aws_route_table.whiteboard_private_table",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.whiteboard_vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf361a38925e3654",
            "route_table_id": "rtb-0ba3d0fcf75e002b8",
            "subnet_id": "subnet-0f799d1b76bc82ed6"
          },
          "dependencies": [
            "aws_eip.eip_nat_gateway",
            "aws_nat_gateway.nat-whiteboard_vpc",
            "aws_route_table.whiteboard_private_table",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.whiteboard_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f78df9bfcd532244",
            "route_table_id": "rtb-0b3216faa8fce75a9",
            "subnet_id": "subnet-0659495809581a580"
          },
          "dependencies": [
            "aws_internet_gateway.igw-whiteboard_vpc",
            "aws_route_table.whiteboard_public_table",
            "aws_subnet.public",
            "aws_vpc.whiteboard_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d49873eca402b2f1",
            "route_table_id": "rtb-0b3216faa8fce75a9",
            "subnet_id": "subnet-0e4aeacc593b6738a"
          },
          "dependencies": [
            "aws_internet_gateway.igw-whiteboard_vpc",
            "aws_route_table.whiteboard_public_table",
            "aws_subnet.public",
            "aws_vpc.whiteboard_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group/sg-0760c610636e0b12f",
            "description": "bastion",
            "egress": [],
            "id": "sg-0760c610636e0b12f",
            "ingress": [],
            "name": "terraform-20230709071344103800000001",
            "name_prefix": "terraform-",
            "owner_id": "569083195829",
            "revoke_rules_on_delete": false,
            "tags": {
              "Envrionment": "ops",
              "Name": "bastion"
            },
            "tags_all": {
              "Envrionment": "ops",
              "Name": "bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bded5f3b5fbaae5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.whiteboard_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "con_linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group/sg-03366ca2b48574c6f",
            "description": "con_linux",
            "egress": [],
            "id": "sg-03366ca2b48574c6f",
            "ingress": [],
            "name": "terraform-20230709071842576000000001",
            "name_prefix": "terraform-",
            "owner_id": "569083195829",
            "revoke_rules_on_delete": false,
            "tags": {
              "Envrionment": "ops",
              "Name": "con_linux"
            },
            "tags_all": {
              "Envrionment": "ops",
              "Name": "con_linux"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bded5f3b5fbaae5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.whiteboard_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group/sg-0e317e5f5ccee3cb4",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0e317e5f5ccee3cb4",
            "ingress": [],
            "name": "alb_sg",
            "name_prefix": "",
            "owner_id": "569083195829",
            "revoke_rules_on_delete": false,
            "tags": {
              "Envrionment": "ops",
              "Name": "alb"
            },
            "tags_all": {
              "Envrionment": "ops",
              "Name": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bded5f3b5fbaae5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.whiteboard_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main_web_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group/sg-085cdfbaa1b5582e9",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-085cdfbaa1b5582e9",
            "ingress": [],
            "name": "main_web_server_sg",
            "name_prefix": "",
            "owner_id": "569083195829",
            "revoke_rules_on_delete": false,
            "tags": {
              "Envrionment": "ops",
              "Name": "web"
            },
            "tags_all": {
              "Envrionment": "ops",
              "Name": "web"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bded5f3b5fbaae5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.whiteboard_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "window",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:security-group/sg-0d4729a6133e550ba",
            "description": "window",
            "egress": [],
            "id": "sg-0d4729a6133e550ba",
            "ingress": [],
            "name": "terraform-20230709071842576100000002",
            "name_prefix": "terraform-",
            "owner_id": "569083195829",
            "revoke_rules_on_delete": false,
            "tags": {
              "Envrionment": "ops",
              "Name": "window"
            },
            "tags_all": {
              "Envrionment": "ops",
              "Name": "window"
            },
            "timeouts": null,
            "vpc_id": "vpc-06bded5f3b5fbaae5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.whiteboard_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:subnet/subnet-08dcd3eb4618b6226",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08dcd3eb4618b6226",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "569083195829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "ops",
              "Name": "WebServer-A",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "ops",
              "Name": "WebServer-A",
              "Tier": "private"
            },
            "vpc_id": "vpc-06bded5f3b5fbaae5"
          },
          "dependencies": [
            "aws_vpc.whiteboard_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:subnet/subnet-0c5e0d170eec159d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5e0d170eec159d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "569083195829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "ops",
              "Name": "WebServer-C",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "ops",
              "Name": "WebServer-C",
              "Tier": "private"
            },
            "vpc_id": "vpc-06bded5f3b5fbaae5"
          },
          "dependencies": [
            "aws_vpc.whiteboard_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:subnet/subnet-0af3c7d3fa86d0050",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af3c7d3fa86d0050",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "569083195829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "ops",
              "Name": "DBMS-A",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "ops",
              "Name": "DBMS-A",
              "Tier": "private"
            },
            "vpc_id": "vpc-06bded5f3b5fbaae5"
          },
          "dependencies": [
            "aws_vpc.whiteboard_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:subnet/subnet-0bbd7572f1c49cdaa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bbd7572f1c49cdaa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "569083195829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "ops",
              "Name": "DBMS-C",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "ops",
              "Name": "DBMS-C",
              "Tier": "private"
            },
            "vpc_id": "vpc-06bded5f3b5fbaae5"
          },
          "dependencies": [
            "aws_vpc.whiteboard_vpc"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:subnet/subnet-0f799d1b76bc82ed6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "192.168.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f799d1b76bc82ed6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "569083195829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "ops",
              "Name": "Window",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "ops",
              "Name": "Window",
              "Tier": "private"
            },
            "vpc_id": "vpc-06bded5f3b5fbaae5"
          },
          "dependencies": [
            "aws_vpc.whiteboard_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:subnet/subnet-0659495809581a580",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "192.168.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0659495809581a580",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "569083195829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "ops",
              "Name": "ALB\u0026NAT",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "ops",
              "Name": "ALB\u0026NAT",
              "Tier": "public"
            },
            "vpc_id": "vpc-06bded5f3b5fbaae5"
          },
          "dependencies": [
            "aws_vpc.whiteboard_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:subnet/subnet-0e4aeacc593b6738a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "192.168.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4aeacc593b6738a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "569083195829",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "ops",
              "Name": "ALB",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "ops",
              "Name": "ALB",
              "Tier": "public"
            },
            "vpc_id": "vpc-06bded5f3b5fbaae5"
          },
          "dependencies": [
            "aws_vpc.whiteboard_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "whiteboard_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:vpc/vpc-06bded5f3b5fbaae5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-094b6271abce765fb",
            "default_route_table_id": "rtb-00619c630e1444859",
            "default_security_group_id": "sg-0c0c61524fe80569a",
            "dhcp_options_id": "dopt-0705ec2b8c927dbea",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06bded5f3b5fbaae5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00619c630e1444859",
            "owner_id": "569083195829",
            "tags": {
              "Environment": "ops",
              "Name": "ops_vpc"
            },
            "tags_all": {
              "Environment": "ops",
              "Name": "ops_vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:569083195829:vpc-endpoint/vpce-0d39ce703f60ad001",
            "cidr_blocks": [
              "52.219.195.0/24",
              "3.5.152.0/21",
              "52.219.200.0/23",
              "52.219.150.0/23",
              "52.219.0.0/20",
              "52.219.162.0/23",
              "52.219.152.0/22",
              "52.219.136.0/22",
              "52.219.16.0/22",
              "52.219.196.0/22",
              "52.219.68.0/22",
              "52.219.172.0/22"
            ],
            "id": "vpce-0d39ce703f60ad001",
            "owner_id": "569083195829",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-61a54008",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0b3216faa8fce75a9",
              "rtb-0ba3d0fcf75e002b8"
            ],
            "service_name": "com.amazonaws.ap-northeast-1.s3",
            "state": "available",
            "tags": {
              "Environment": "ops",
              "Name": "ops_s3_endpoint"
            },
            "tags_all": {
              "Environment": "ops",
              "Name": "ops_s3_endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-06bded5f3b5fbaae5"
          },
          "dependencies": [
            "aws_vpc.whiteboard_vpc"
          ]
        }
      ]
    }
  ]
}